# stm32u5-usbx-cmake-test

./: .mxproject  CMakeLists.txt  STM32U599xx_FLASH.ld  STM32U599xx_RAM.ld  stm32u5-usbx-cmake-test.ioc
Core/Inc/: stm32u5xx_hal_conf.h
Core/Src/: main.c  stm32u5xx_hal_msp.c
USBX/App/: app_usbx_device.c  app_usbx_device.h  ux_user.h
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
